--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -55,5 +57,6 @@
     "@types/styled-components": "^5.1.25",
     "install": "^0.13.0",
     "npm": "^8.10.0"
-  }
+  },
+  "homepage": "https://siby1la.github.io/react-zelda"
 }
